--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.0",
+    "@radix-ui/react-select": "^2.1.6",
     "axios": "^0.27.2",
+    "chart.js": "^4.4.8",
     "classnames": "^2.3.1",
+    "lucide-react": "^0.477.0",
     "next": "12.1.6",
-    "react": "18.1.0",
+    "react": "^18.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.3",
     "react-icons": "^4.4.0",
