--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "classnames": "^2.3.1",
     "lucide-react": "^0.477.0",
     "next": "12.1.6",
-    "react": "^18.1.0",
+    "react": "18.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.1.0",
-    "react-hook-form": "^7.31.3",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^4.4.0",
     "react-input-mask": "^2.0.4",
     "react-toastify": "^9.0.5"
